// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resource method "create" should create resource 1`] = `
Array [
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE DATABASE \`databaseName\`
    CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci
  ",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE USER \\"userLogin\\" IDENTIFIED BY \\"userPassword\\"",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "GRANT ALL ON \`databaseName\`.* TO \\"userLogin\\"@'%'",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE TABLE IF NOT EXISTS \`databaseName\`.\`tableName\`(
      \`eventId\` BIGINT NOT NULL,
      \`timestamp\` BIGINT NOT NULL,
      \`aggregateId\` VARCHAR(190) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
      \`aggregateVersion\` BIGINT NOT NULL,
      \`type\` VARCHAR(190) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
      \`payload\` LONGTEXT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL,
      PRIMARY KEY(\`eventId\`),
      INDEX USING BTREE(\`aggregateId\`, \`aggregateVersion\`),
      INDEX USING BTREE(\`aggregateId\`),
      INDEX USING BTREE(\`aggregateVersion\`),
      INDEX USING BTREE(\`type\`),
      INDEX USING BTREE(\`timestamp\`),
      UNIQUE(\`aggregateId\`, \`aggregateVersion\`)
    )
    CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci
    ",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE TABLE IF NOT EXISTS \`databaseName\`.\`tableName-sequence\`(
      \`key\` BIGINT NOT NULL,
      \`eventId\` BIGINT NOT NULL,
      \`timestamp\` BIGINT NOT NULL,
      \`transactionId\` VARCHAR(190) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
      PRIMARY KEY(\`key\`)
    )",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "INSERT INTO \`databaseName\`.\`tableName-sequence\`(
      \`key\`,
      \`eventId\`,
      \`timestamp\`,
      \`transactionId\`
    ) VALUES (
      0, 0, 0, \\"0\\"
    )",
  },
]
`;

exports[`resource method "destroy" should destroy resource 1`] = `
Array [
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "DROP DATABASE \`databaseName\`",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "DROP USER \\"userLogin\\"",
  },
]
`;

exports[`resource method "dispose" should dispose resource 1`] = `
Array [
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "DROP DATABASE \`databaseName\`",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "DROP USER \\"userLogin\\"",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE DATABASE \`databaseName\`
    CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci
  ",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE USER \\"userLogin\\" IDENTIFIED BY \\"userPassword\\"",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "GRANT ALL ON \`databaseName\`.* TO \\"userLogin\\"@'%'",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE TABLE IF NOT EXISTS \`databaseName\`.\`tableName\`(
      \`eventId\` BIGINT NOT NULL,
      \`timestamp\` BIGINT NOT NULL,
      \`aggregateId\` VARCHAR(190) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
      \`aggregateVersion\` BIGINT NOT NULL,
      \`type\` VARCHAR(190) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
      \`payload\` LONGTEXT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL,
      PRIMARY KEY(\`eventId\`),
      INDEX USING BTREE(\`aggregateId\`, \`aggregateVersion\`),
      INDEX USING BTREE(\`aggregateId\`),
      INDEX USING BTREE(\`aggregateVersion\`),
      INDEX USING BTREE(\`type\`),
      INDEX USING BTREE(\`timestamp\`),
      UNIQUE(\`aggregateId\`, \`aggregateVersion\`)
    )
    CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci
    ",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "CREATE TABLE IF NOT EXISTS \`databaseName\`.\`tableName-sequence\`(
      \`key\` BIGINT NOT NULL,
      \`eventId\` BIGINT NOT NULL,
      \`timestamp\` BIGINT NOT NULL,
      \`transactionId\` VARCHAR(190) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
      PRIMARY KEY(\`key\`)
    )",
  },
  "executeStatement",
  Object {
    "continueAfterTimeout": false,
    "database": "mysql",
    "includeResultMetadata": true,
    "resourceArn": "dbClusterOrInstanceArn",
    "secretArn": "awsSecretStoreAdminArn",
    "sql": "INSERT INTO \`databaseName\`.\`tableName-sequence\`(
      \`key\`,
      \`eventId\`,
      \`timestamp\`,
      \`transactionId\`
    ) VALUES (
      0, 0, 0, \\"0\\"
    )",
  },
]
`;
